--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^0.2.12",
     "@vue/composition-api": "^1.0.0-beta.6",
     "aws-amplify": "^3.0.22",
     "aws-sdk": "^2.721.0",
