--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "typescript": "~3.9.3",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.3.0",
+    "webpack": "^4.43.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
